<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomActions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/custom_bottom_menu_rounded_back"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShare"
        android:text="@string/share_file"
        android:fontFamily="@font/vk_sans_display_medium"
        app:iconGravity="top"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="11sp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:iconGravity="top"
        android:fontFamily="@font/vk_sans_display_medium"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/ic_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRename"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_gravity="center_horizontal"
        android:text="@string/rename"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        android:textSize="11sp"
        android:fontFamily="@font/vk_sans_display_medium"
        app:iconGravity="top"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_edit" />


</LinearLayout>